sgleam-core-tests/tests/snapshots/integration__run_file@Invalid.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/Invalid.gleam
---
STDOUT

STDERR
