sgleam-core-tests/tests/snapshots/integration__run_file@check_true_false.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/check_true_false.gleam
---
STDOUT

STDERR
