sgleam-core-tests/tests/snapshots/integration__run_file@main_nil_int.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/main_nil_int.gleam
---
STDOUT

STDERR
